--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
 		"svelte": "^5.0.0-next.71",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"d3": "^7.9.0"
+	}
 }
