--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "type": "module",
   "dependencies": {
     "@floating-ui/dom": "^1.6.3",
-    "d3": "^7.9.0"
+    "d3": "^7.9.0",
+    "svelte-scrolly": "^0.0.3"
   }
 }
